fix: remove duplicative gap property

--- a/src/components/sidebar/components/sidebar-nav/sidebar-nav-menu-item/sidebar-nav-menu-item.module.css
+++ b/src/components/sidebar/components/sidebar-nav/sidebar-nav-menu-item/sidebar-nav-menu-item.module.css
@@ -8,7 +8,6 @@
   display: flex;
   font-size: 14px;
   font-weight: 400;
-  gap: 8px;
   justify-content: space-between;
   line-height: 18px;
   margin-bottom: 2px;
